WIP: Updated GatherDataCpp on hello.  Altered analysis notebook to work with data acquired with different sites.

--- a/test/GatherDataAnalysis.ipynb
+++ b/test/GatherDataAnalysis.ipynb
@@ -17,14 +17,17 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import glob\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from pathlib import Path\n",
+    "\n",
     "FONTSIZE = 16\n",
     "\n",
-    "for j, fname in enumerate(glob.glob('gatherDataCpp_*_*_*_*_*_*.dat')):\n",
+    "DATAPATH = Path('..', 'sites', 'hello')\n",
+    "\n",
+    "for j, fname in enumerate(DATAPATH.glob('gatherDataCpp_*_*_*_*_*_*.dat')):\n",
     "    tmp_df = pd.read_csv(fname, delimiter=',', header='infer', comment='#')\n",
     "    assert(len(tmp_df.NXB.unique()) == 1)\n",
     "    assert(len(tmp_df.NYB.unique()) == 1)\n",
@@ -53,7 +56,7 @@
     "    else:\n",
     "        cpp_df = pd.concat([cpp_df, tmp_df], ignore_index=True)\n",
     "\n",
-    "for j, fname in enumerate(glob.glob('gatherDataF2003_*_*_*_*_*_*.dat')):\n",
+    "for j, fname in enumerate(DATAPATH.glob('gatherDataF2003_*_*_*_*_*_*.dat')):\n",
     "    tmp_df = pd.read_csv(fname, delimiter=',', header='infer', comment='#')\n",
     "    assert(len(tmp_df) == 1)\n",
     "    assert(tmp_df.loc[0].dx == tmp_df.loc[0].dy)\n",
