--- a/docs/data types.tex
+++ b/docs/data types.tex
@@ -55,7 +55,7 @@ The RealVect class represents NDIM-tuples of Reals. They typically represent poi
 \section{Arrays}
 \subsection*{FArray4D}
 
-The FArray4D class functions primarily as a wrapper to Real pointers that provides Fortran-like access to their data with an overload of \texttt{operator()}. Notably, the access pattern is Fortran-style row major.
+The FArray4D class functions primarily as a wrapper to Real pointers that provides Fortran-like access to their data with an overload of \texttt{operator()}. Notably, the access pattern is Fortran-style column major.
 
 
 
