--- a/docs/GridPolymorphism.tex
+++ b/docs/GridPolymorphism.tex
@@ -30,7 +30,7 @@ Section of dev guide explaining how polymorphism was achieved in Grid base class
 
 \section{Polymorphism}
 
-Base classes in the Grid unit (e.g. Grid, Tile) need to have package-agnostic public interfaces so they can be used in physics code without regard to the AMR package. However, the implementation of these classes is highly dependent on the package, so polymorphism is needed. All of the Grid base classes use the same class design pattern to achieve polymorphism - an abstract base class with virtual methods that are implemented in concrete derived classes (e.g. GridAmrex, TileAmrex). The abstract base classes control the public interface while the derived classes contain private data members and methods as needed for the implementation. However, the way these classes are instantiated and passed through public interfaces varies. Three patterns are explained below, with examples.
+Base classes in the Grid unit (e.g. Grid, Tile) need to have package-agnostic public interfaces so they can be used in physics code without regard to the AMR package. However, the implementation of these classes is highly dependent on the package, so polymorphism is needed. All of the Grid base classes use the same class design pattern to achieve polymorphism - an abstract base class with virtual methods that are implemented in concrete derived classes (e.g. GridAmrex, TileAmrex). The abstract base classes control the public interface while the derived classes contain private data members and methods as needed for the implementation. However, the way these classes are instantiated and passed through public interfaces varies. Two patterns are explained below, with examples.
 
 
 \section{Reference-Based Singleton (e.g. Grid)}
@@ -66,31 +66,23 @@ std::unique_ptr<Tile> TileIterBaseAmrex::buildCurrentTile() override {
 }
 
 // Usage
-std::unique_ptr<Tile> t = itor.currentTile();
+std::unique_ptr<Tile> t = ti->buildCurrentTile();
 IntVect coord = t->lo();
 \end{verbatim}
 
-\section{Smart Pointer Wrapper (e.g. TileIter) }
-
-For a third type of object, Tile Iterators,  instantiation is needed multiple times, but memory management is less critical. Thus, in order to hide some C++ ugliness, the smart pointers from the above pattern are stuffed into a simple wrapper class (TileIter) which passes through public interface function calls to the underlying pointer. Thus users can treat TileIter objects as simple objects despite the fact that they behave in a polymorphic way.
-
-This design pattern was inspired by StackOverflow user Jens in \href{https://stackoverflow.com/a/38011637}{this post}.
-
+TileIter requires the same type of polymorphism as Tile, so the same pattern was used:
 \begin{verbatim}
 // Creation
-TileIter GridAmrex::buildTileIter(const unsigned int lev) {
-    std::unique_ptr<TileIterBaseAmrex> tiPtr{ new TileIterBaseAmrex(unk_, lev) };
-    return TileIter( std::move(tiPtr) );
+std::unique_ptr<TileIter> GridAmrex::buildTileIter(const unsigned int lev) {
+    return std::unique_ptr<TileIter>{ new TileIterAmrex(unk_, lev) };
 }
 
 // Usage
-for (TileIter ti = grid.makeTileIter(0); ti.isValid(); ++ti ) {
-    std::unique_ptr<Tile> tileDesc = ti.buildCurrentTile();
+for (auto ti = grid.makeTileIter(0); ti->isValid(); ti->next() ) {
+    std::unique_ptr<Tile> tileDesc = ti->buildCurrentTile();
     ...
 }
 
 
 \end{verbatim}
-
-
 \end{document}
